--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
   implementation "io.vertx:vertx-core:$vertxVersion"
   implementation "io.vertx:vertx-web:$vertxVersion"
   implementation "io.vertx:vertx-web-client:$vertxVersion"
+  implementation "io.vertx:vertx-service-discovery:$vertxVersion"
   compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.7.2'
   compile "io.vertx:vertx-jdbc-client:$vertxVersion"
 
